--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 appdirs==1.4.3
-beautifulsoup4==4.5.3
+beautifulsoup4==4.8.1
 bs4==0.0.1
 lxml==3.7.3
-MySQL-python==1.2.5
-packaging==16.8
-peewee==2.8.0
-psycopg2==2.7.1
+packaging==19.2
+peewee==3.13.1
+psycopg2
 pyparsing==2.2.0
 requests==2.13.0
 six==1.10.0
